# ws-chat

./: Cargo.toml  chat.ts
src/: main.rs
static/: chat.css  chat.js  index.html
