[package]
name = "ws-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.28", default-features = false}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
warp = "0.3.5"
